--- a/FoodDeliveryApp/food-delivery-app-FE/src/app/header/components/header.component.css
+++ b/FoodDeliveryApp/food-delivery-app-FE/src/app/header/components/header.component.css
@@ -1,4 +1,38 @@
-.user-avatar {
+/* order-summary.component.css */
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Center the content */
+    background-color: #4CAF50;
+    padding: 10px 20px;
+    border-radius: 10px 10px 0 0;
+    color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Center the content */
+    width: 100%;
+  }
+  
+  .spicy-kingdom h1 {
+    font-size: 2em; /* Make the text bigger */
+    font-weight: bold; /* Make the text bold */
+    color: #FFD700; /* Distinct gold color */
+    margin: 0; /* Remove default margin */
+  }
+  
+  .header-nav {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 20px;
+  }
+  
+  .user-avatar {
     display: flex;
     align-items: center;
   }
