--- a/FoodDeliveryApp/food-delivery-app-FE/src/app/header/components/header.component.html
+++ b/FoodDeliveryApp/food-delivery-app-FE/src/app/header/components/header.component.html
@@ -1,11 +1,12 @@
 <header class="header">
     <div class="header-container">
-      <h1 class="header-logo">Code Decode Food Delivery</h1>
+      <h1 class="header-logo">Spicy Kingdom</h1>
       <nav class="header-nav">
         <div class="user-avatar">
-            <img src="assets/avatar-pics/avatar1.jpg" alt="User Avatar">
-            <span class="username">Hey {{ username }}</span>
-          </div>
+          <img src="assets/avatar-pics/avatar1.jpg" alt="User Avatar">
+          <span class="username">Hey {{ username }}</span>
+        </div>
       </nav>
     </div>
   </header>
+  
