Front end design modifed and test cases added on RestaurantListing MS

--- a/FoodDeliveryApp/food-delivery-app-FE/src/app/header/components/header.component.html
+++ b/FoodDeliveryApp/food-delivery-app-FE/src/app/header/components/header.component.html
@@ -1,12 +1,11 @@
 <header class="header">
-    <div class="header-container">
-      <h1 class="header-logo">Spicy Kingdom</h1>
+  <div class="header-container">
+      <h1 class="header-logo">Spicy yet Juicy ... <span class="header-subtitle">Flavours of South East Asia</span></h1>
       <nav class="header-nav">
-        <div class="user-avatar">
-          <img src="assets/avatar-pics/avatar1.jpg" alt="User Avatar">
-          <span class="username">Hey {{ username }}</span>
-        </div>
+          <div class="user-avatar">
+              <img src="assets/avatar-pics/avatar1.jpg" alt="User Avatar">
+              <span class="username">Hey {{ username }}</span>
+          </div>
       </nav>
-    </div>
-  </header>
-  
+  </div>
+</header>
