--- a/FoodDeliveryApp/food-delivery-app-FE/src/app/header/components/header.component.css
+++ b/FoodDeliveryApp/food-delivery-app-FE/src/app/header/components/header.component.css
@@ -1,52 +1,51 @@
-/* order-summary.component.css */
-
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: center; /* Center the content */
-    background-color: #4CAF50;
-    padding: 10px 20px;
-    border-radius: 10px 10px 0 0;
-    color: white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .header-container {
-    display: flex;
-    align-items: center;
-    justify-content: center; /* Center the content */
-    width: 100%;
-  }
-  
-  .spicy-kingdom h1 {
-    font-size: 2em; /* Make the text bigger */
-    font-weight: bold; /* Make the text bold */
-    color: #FFD700; /* Distinct gold color */
-    margin: 0; /* Remove default margin */
-  }
-  
-  .header-nav {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    right: 20px;
-  }
-  
-  .user-avatar {
-    display: flex;
-    align-items: center;
-  }
-  
-  .user-avatar img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
-  }
-  
-  .username {
-    font-size: 14px;
-    font-weight: bold;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center the content */
+  background-color: #4CAF50;
+  padding: 15px 20px;
+  border-radius: 10px 10px 0 0;
+  color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-size: 1.5em; /* to increase the font size */
+}
+.header-logo {
+  font-size: 2em; /* General font size for the header logo */
+}
+
+.header-subtitle {
+  font-size: 0.5em; /* Adjust this value to make the subtitle smaller */
+}
+
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center the content */
+  width: 100%;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 20px;
+}
+
+.user-avatar {
+  display: flex;
+  align-items: center;
+}
+
+.user-avatar img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.username {
+  font-size: 14px;
+  font-weight: bold;
+}
