--- a/FoodDeliveryApp/food-delivery-app-FE/src/app/user/user.component.css
+++ b/FoodDeliveryApp/food-delivery-app-FE/src/app/user/user.component.css
@@ -1,4 +1,11 @@
 .login {
     width: 60%;
-    margin-top: 15%;
+    margin-top: 7%;
+    background: antiquewhite;
+    padding: 3%;
+}
+
+.title {
+    text-align: center;
+    margin-bottom: 6%;
 }
