--- a/FoodDeliveryApp/food-delivery-app-FE/src/app/view/component/resturant-details/resturant-details.component.css
+++ b/FoodDeliveryApp/food-delivery-app-FE/src/app/view/component/resturant-details/resturant-details.component.css
@@ -6,3 +6,13 @@
     border: 1px solid #ddd;
     border-radius: 0.5srem;
 }
+
+.details-container {
+    background: antiquewhite;
+    padding: 5%;
+    margin-bottom: 3%;
+}
+
+.nav-btn {
+    margin-left: 6%;
+}
